# victoire

./: Cargo.toml
src/: lib.rs
src/types/: card.rs  game.rs  mod.rs  player.rs
victoire/: Cargo.toml
victoire-macros/: Cargo.toml
victoire-macros/src/: card_macros.rs  lib.rs  utils.rs
victoire/src/: callbacks.rs  error.rs  lib.rs  prelude.rs  utils.rs
victoire/src/cards/: base.rs  dominion.rs  mod.rs  prelude.rs
victoire/src/types/: card.rs  game.rs  mod.rs  player.rs
victoire/tests/: test_player.rs
