[package]
name = "victoire-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
victoire = { path = "../victoire" }

serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"

