[package]
name = "victoire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
victoire-macros = { path = "../victoire-macros" }

dyn-clonable = "0.9"
itertools = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
typetag = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
